@@ -2,7 +2,7 @@ use 5.006;
 use ExtUtils::MakeMaker;
 WriteMakefile(
                 NAME         => 'Number::Phone',
-                VERSION      => 1.581,
+                VERSION      => 1.6,
                 PREREQ_PM    => {
                         'Scalar::Util'  => 0,
                         # commented out cos 1.0 is incompatible
