@@ -1,3 +1,7 @@
+2008-05-27      1.6     Magic country detection now works (thanks to
+                          Jos Boumans for reporting the bug);
+                        New UK allocations
+
 2008-02-27      1.581   Added dependency on perl 5.006 (DBM::Deep uses 'our');
                         Removed docs from N::P::UK::DBM::Deep and
                           replaced with note about its status;
